# Bytesight

./: .project  AGENTS.md  CLAUDE.md  README.md  build.gradle.kts  settings.gradle.kts
.claude/: settings.local.json
agent/: .project  build.gradle.kts
agent/src/main/cpp/: CMakeLists.txt
agent/src/main/cpp/include/: bytesight_heap.h
agent/src/main/cpp/src/: agent_entry.cpp  capabilities.cpp  jni_bridge.cpp  object_reader.cpp  search.cpp  snapshot.cpp
agent/src/main/java/com/bugdigger/agent/: AgentConfig.java  BytesightAgent.java
agent/src/main/java/com/bugdigger/agent/collector/: ClassCollector.java  ClassLoadListener.java  LoadedClassInfo.java
ai/: build.gradle.kts
ai/src/main/kotlin/com/bugdigger/ai/: AgentConfig.kt  BytesightAgent.kt  BytesightAgentServices.kt  BytesightTools.kt
ai/src/test/kotlin/com/bugdigger/ai/: BytesightToolsTest.kt
composeApp/: .classpath  .project  build.gradle.kts
composeApp/src/jvmMain/kotlin/com/bugdigger/bytesight/: App.kt  Greeting.kt  Platform.kt  main.kt
composeApp/src/jvmMain/resources/: logback.xml
composeApp/src/jvmTest/kotlin/com/bugdigger/bytesight/: ComposeAppDesktopTest.kt
core/: .project  build.gradle.kts
devdocs/: ai-and-renaming-plan.md  debugger.md  heap-testing-guide.md  plan.md
gradle/: libs.versions.toml
protocol/: .classpath  .project  build.gradle.kts
protocol/src/main/proto/: bytesight.proto
sample/: .project  build.gradle.kts
sample/src/main/java/com/bugdigger/: Main.java
sample/src/main/java/com/bugdigger/sample/: SampleApplication.java
(+91 files in other folders)
